k8s-cert-manager/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: vault-issuer
  name: ingress
  namespace: cm
spec:
  rules:
  - host: ${minikube_ip}.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kuard
            port:
              number: 80
  tls:
  - hosts:
    - ${minikube_ip}.nip.io
    secretName: kuard-cert
